--- a/index.html
+++ b/index.html
@@ -319,11 +319,11 @@
           <!-- Input Container -->
           <div class="flex flex-col justify-between">
             <form action="">
-              <div class="flex space-x-3">
+              <div class="flex justify-center flex-wrap md:flex-no-wrap space-x-3">
                 <input 
                 type="text" 
                 class="flex-1 px-4 rounded-full focus:outline-none">
-                <button class="px-6 py-2 text-white rounded-full bg-brightRed hover:bg-brightRedLight focus:outline-none">
+                <button class="px-6 mt-5 md:mt-0 py-2 text-white rounded-full bg-brightRed hover:bg-brightRedLight focus:outline-none">
                   Go
                 </button>
               </div>
